--- a/css/modules/custom.css
+++ b/css/modules/custom.css
@@ -47,7 +47,7 @@
 
 #virtualclassCont.congrea #virtualclassPreCheck.bootstrap .btn-default:hover {
   background-color: #eee;
-  border-color: #aaa !important;
+  border-color: #aaa;
 }
 
 #virtualclassCont.congrea .bootstrap .progress {
