--- a/css/modules/icon.css
+++ b/css/modules/icon.css
@@ -33,13 +33,13 @@
 
 #virtualclassCont .icon-pencil2::before {
   content: "\f044";
-  font-size: 18px !important;
+  font-size: 18px;
   color: #717171;
 }
 
 #virtualclassCont .icon-bin22::before {
   content: "\f014";
-  font-size: 18px !important;
+  font-size: 18px;
   color: #717171;
 }
 
@@ -66,7 +66,7 @@
 
 #virtualclassCont .icon-publish2::before {
   content: "\e924";
-  font-size: 14px !important;
+  font-size: 14px;
   color: #717171;
 }
 
@@ -616,7 +616,7 @@
 #virtualclassCont.congrea #virtualclassMultiVideoTool .icon-videoConfrence::before {
   content: "\f0c0";
   font-size: 18px;
-  color: #eee !important;
+  color: #eee;
   position: relative;
   top: 2px;
 }
@@ -738,7 +738,7 @@
   font-weight: normal;
   font-family: 'icomoon';
   font-size: 13px;
-  color: #fff !important;
+  color: #fff;
 }
 
 #virtualclassApp.collapsedRightbar .icon-sidebarButton::before {
@@ -746,7 +746,7 @@
   font-weight: normal;
   font-family: 'icomoon';
   font-size: 13px;
-  color: #fff !important;
+  color: #fff;
 }
 
 #virtualclassCont.congrea #rightBarHeader #askQuestionHeader .header .addQuestion-icon::before {
@@ -756,15 +756,6 @@
   font-size: 0.875rem;
   cursor: pointer;
   color: #fff;
-}
-
-#virtualclassCont.congrea #rightBarHeader #askQuestionHeader .header .help-icon::before {
-  content: "\f29c";
-  font-weight: normal;
-  font-family: 'icomoon';
-  font-size: 1.125rem;
-  cursor: pointer;
-  color: #fff !important;
 }
 
 #virtualclassCont.congrea #rightBarHeader #askQuestionHeader .header .fullScreen-icon.deactive::before {
