--- a/css/modules/media.css
+++ b/css/modules/media.css
@@ -22,7 +22,7 @@
 #virtualclassCont.congrea.teacher #audioWidget .deactive a img,
 #virtualclassCont.congrea.student #audioWidget .audioTool.active a img,
 #virtualclassCont.congrea.student #audioWidget .audioTool.deactive a img {
-  border: #41aa45 solid 1px !important;
+  border: #41aa45 solid 1px;
   padding: 1px;
   border-radius: 4px;
   padding-right: 0;
@@ -87,7 +87,7 @@
 #virtualclassCont.congrea #audioTest-box .audioTool {
   position: relative;
   z-index: 0;
-  border-top: none !important;
+  border-top: none;
   border-bottom-right-radius: 8px;
   padding: 14px 8px 8px;
 }
