--- a/css/modules/popup.css
+++ b/css/modules/popup.css
@@ -38,7 +38,7 @@
 }
 
 #virtualclassCont.congrea #popupContainer div#about-modal[data-curr-popup="chromeExt"] {
-  left: 45% !important;
+  left: 45%;
 }
 
 .rv-vanilla-modal-overlay {
@@ -268,7 +268,7 @@
 }
 
 #virtualclassCont.congrea #totProgressCont {
-  margin-bottom: 20px !important;
+  margin-bottom: 20px;
 }
 
 #virtualclassCont.congrea #downloadProgressValue.progressValue {
@@ -361,15 +361,10 @@
   background-image: none;
 }
 
-#virtualclassCont.congrea #confirmCancel #confirmCancelButton:hover {
-  background-image: none;
-  background-color: #515e69 !important;
-}
-
 #virtualclassCont.congrea #popupContainer .rv-vanilla-modal-is-open {
   display: block;
   z-index: 100001;
-  border-width: 2px !important;
+  border-width: 2px;
   position: absolute;
   width: fit-content;
   top: 50%;
@@ -389,26 +384,14 @@
 #virtualclassCont.congrea #about-modal #recordPlay .rv-vanilla-modal-body,
 #virtualclassCont.congrea .rv-vanilla-modal,
 #virtualclassCont.congrea #confirm.popupWindow.simple-box {
-  border-radius: 13px !important;
+  border-radius: 13px;
 }
-
-/* #virtualclassCont.congrea #downloadProgress{ */
-
-/* background-color: #eee; */
-
-/* } */
-
-/* #virtualclassCont.congrea #alleditorRichContainer, #virtualclassCont.congrea #alleditorRichContainer:hover, #virtualclassCont.congrea #alleditorRichContainer, #virtualclassCont.congrea #alleditorCodeContainer, #virtualclassCont.congrea #alleditorRichContainer:hover, #virtualclassCont.congrea #alleditorCodeContainer:hover{ */
-
-/* background-image: none; */
-
-/* } */
 
 #alleditorCodeContainer [data-action="enable"],
 #virtualclassCont.congrea #alleditorRichContainer [data-action="enable"] {
   font-weight: normal;
-  border-radius: 5px !important;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  border-radius: 5px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 #virtualclassCont.congrea #alleditorRichContainer [data-action="enable"]::before {
@@ -431,7 +414,7 @@
 
 #alleditorCodeContainer [data-action="disable"],
 #virtualclassCont.congrea #alleditorRichContainer [data-action="disable"] {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 #virtualclassCont.congrea #alleditorRichContainer #alleditorRichContainerAnch span {
