--- a/css/modules/screenshare.css
+++ b/css/modules/screenshare.css
@@ -26,7 +26,7 @@
 }
 
 #virtualclassCont.congrea #virtualclassScreenShareTool.active a span {
-  color: #fff !important;
+  color: #fff;
 }
 
 #virtualclassCont.congrea #virtualclassScreenShareTool a img {
