Handle active all on page refresh

--- a/templates/whiteboard/toolbar.hbs
+++ b/templates/whiteboard/toolbar.hbs
@@ -158,7 +158,7 @@
     </table>
   </div>
 
-  <div id="t_activeall{{cn}}" class="tool notshape" data-tool="activeAll">
+  <div id="t_activeAll{{cn}}" class="tool notshape" data-tool="activeAll">
     <a href="#" data-title="{{getString 'ActiveAll'}}" class="congtooltip"> <span class="icon-activeAll cgIcon"></span></a>
   </div>
 
