--- a/css/modules/right-sidebar.css
+++ b/css/modules/right-sidebar.css
@@ -32,6 +32,7 @@ body {
   z-index: 1000;
   display: flex;
   flex-direction: row;
+  list-style: none;
 }
 
 #virtualclassCont.congrea.playMode #rightSubContainer #chatWidget .chatBarTab {
