--- a/css/modules/video.css
+++ b/css/modules/video.css
@@ -20,7 +20,7 @@
 
 #virtualclassCont.congrea #videourl {
   display: inline;
-  height: 100% !important;
+  height: 100%;
   padding-left: 10px;
   padding-right: 70px;
 
