Handle fullscreen disable for pwa

--- a/css/modules/styles.css
+++ b/css/modules/styles.css
@@ -4555,6 +4555,7 @@ body {
 
 #virtualclassCont.congrea[device="mobile"].Chrome .mobileLandscapeWarn #installContainer {
   padding: 5rem;
+  display: block;
 }
 
 #virtualclassCont.congrea[device="mobile"] .mobileLandscapeWarn #installContainer p {
